# slash-discord-rs

./: Cargo.toml
src/: builders.rs  connection.rs  lib.rs  model.rs
